fix fullscreen iframes on iOS

--- a/resource/support/css/mario.css
+++ b/resource/support/css/mario.css
@@ -945,31 +945,39 @@ body {
     padding:          20px;
 }
 
+/* needed for mobile Safari */
+*:-webkit-full-screen {
+    width:  100% !important;
+    height: 100% !important;
+}
+
 .reveal div.fs-container:fullscreen>iframe {
     border: none;
 }
 
 .reveal button.fs-button { 
-    z-index:    100;
-    display:    inline-block;
-    position:   absolute;
-    top:        0px;
-    right:      0px;
-    cursor:     pointer;
-    padding:    2px;
-    border:     none;
-    outline:    none;
-    background-color: rgba(255,255,255,0.2);
-    font-size:  var(--whiteboard-icon-size);
-    padding:    calc(var(--whiteboard-icon-size) * 0.5);
-    opacity:    0.5;
-    color:      var(--whiteboard-inactive-color);
+    z-index:          100;
+    display:          inline-block;
+    position:         absolute;
+    top:              0px;
+    right:            0px;
+    cursor:           pointer;
+    outline:          none;
+    font-size:        20px;
+    width:            24px;
+    height:           24px;
+    padding:          2px;
+    border:           none;
+    border-radius:    4px;
+    opacity:          0.5;
+    color:            var(--whiteboard-inactive-color);
+    background-color: rgba(255,255,255,0.5);
 }
 
 .reveal button.fs-button:hover { 
-    opacity: 1.0;
-    color: var(--whiteboard-active-color);
-    background-color: rgba(255,255,255,0.5);
+    opacity:          1.0;
+    color:            var(--whiteboard-active-color);
+    background-color: rgba(255,255,255,0.8);
 }
 
 
